--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 <b>Emergence of a synergistic scaffold in the brains of human infants</b>. <u><i>Thomas Varley</u>, Olaf Sporns, Nathan Stevenson, Martha Welch, Michael Myers, Vanhatalo Sampsa, and Anton Tokariev.</i><br>
 <b>Memory capacity in reservoir computing</b>.<u> <i>Fatemeh Hadaeghi</u> and Claus Hilgetag.</i><br>
 <b>Timer varying synergy redundancy</b>. <u><i>Maria Pope</u>, Thomas Varley, and Olaf Sporns.</i><br>
-<b>Learning in spiking networks</b>. <u><i>Arsha Razavi</u></i>.<br>
+<b>Learning in spiking networks</b>. <u><i>Arshia Razavi</u></i>.<br>
 <b>Modelling the Complexity of Treatment Resistant Depression using Markov Random Fields</b>. <u><i>Alice Erchov</u>, Downar Jonathan, Daniel Blumberger, and Fidel Vila-Rodriguez.</i><br>
 <b>Network spreading and local biological vulnerability in amyotrophic lateral sclerosis</b>. <i><u>Asa Farahani</u> and Bratislav Misic.</i><br>
 <b>Functional brain network interaction changes across the ovarian cycle</b>. <i><u>Xining Chen</u>, Joespeh Andreano, Abigail Giancola, Sophia Tchir, and Emma K. Towlson.</i><br>
