--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 2:30pm:  <b>Invited talk - TBD</b><br><i>Javeria Ali Hashmi</i> <br> </p>
 3:00pm:  <b>Preterm children and rich clubs</b><br><i><u>David Vanier</u>, Hongye Wang, Amanda Ip, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
 3:15pm:  <b>SC-FC in PD</b><br><i><u>Alberto Cacciola</u>, Gianpaolo Basile, Giuseppe Acri, Lilla Bonanno, Augusto Ielo, Silvia Marino, Amelia Brigandì, Chiara Sorbera, Rosa Morabito, Giuseppe Di Lorenzo, Antonio Cerasa, and Angelo Quartarone.</i> <br>
-3:30pm:  <b>Structural and functional analysis of cognitive integration and segregation within aging human</b><br><i><u> Drew Patton</u>.</i> <br><br>
+3:30pm:  <b>Structural and functional analysis of cognitive integration and segregation within aging human connectomes</b><br><i><u> Drew Patton</u> and Joern Davidsen.</i> <br><br>
 
 <p style="background-color:#DCDCDC">
 3:45pm:  <b>Coffee Break</b> <br>
@@ -233,7 +233,7 @@
 <b>Emergence of a synergistic scaffold in the brains of human infants</b>. <u><i>Thomas Varley</u>, Olaf Sporns, Nathan Stevenson, Martha Welch, Michael Myers, Vanhatalo Sampsa, and Anton Tokariev.</i><br>
 <b>Memory capacity in reservoir computing</b>.<u> <i>Fatemeh Hadaeghi</u> and Claus Hilgetag.</i><br>
 <b>Timer varying synergy redundancy</b>. <u><i>Maria Pope</u>, Thomas Varley, and Olaf Sporns.</i><br>
-<b>Learning in spiking networks</b>. <u><i>Arshia Razavi</u></i>.<br>
+<b>Learning in spiking networks</b>. <u><i>Arshia Razavi</u> and Javier G. Orlandi</i>.<br>
 <b>Modelling the Complexity of Treatment Resistant Depression using Markov Random Fields</b>. <u><i>Alice Erchov</u>, Downar Jonathan, Daniel Blumberger, and Fidel Vila-Rodriguez.</i><br>
 <b>Network spreading and local biological vulnerability in amyotrophic lateral sclerosis</b>. <i><u>Asa Farahani</u> and Bratislav Misic.</i><br>
 <b>Functional brain network interaction changes across the ovarian cycle</b>. <i><u>Xining Chen</u>, Joespeh Andreano, Abigail Giancola, Sophia Tchir, and Emma K. Towlson.</i><br>
