--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 10:15am: <b>Coffee Break</b> <br>
 </p><br>
 
-11:00am:  <b>Invited talk - TBD</b><br>Enrico Amico</i><br> 
+11:00am:  <b>Information transmission in mammalian brain networks</b><br><i>Enrico Amico</i><br> 
 11:30am:  <b>Emergence of metastability in frustrated oscillatory networks: the key role of hierarchical modularity</b><br><i><u>Enrico Caprioglio</u> and Luc Berthouze.</i> <br>
 11:45am: <b>Situating edge time series within the generalized linear model framework</b><br><i><u>Haily Merritt</u>, Amanda Mejia, and Richard Betzel.</i></p>
 12:00pm:  <b>Simulated Annealing</b><br><i><u>Filip Milisav</u>, Vincent Bazinet, Richard Betzel, and Bratislav Misic.</i> <br><br>
