--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 </p>
 <p> <br>
 9:00am: Opening remarks <br>
-9:15am: <b> Invited talk - TBD</b> <br><i>Nils Forkert</i><br>
+9:15am: <b>Using deep neural networks to model neurodegenerative diseases in silico</b> <br><i>Nils Forkert</i><br>
 9:45am: <b>Entropic measures for diverse specialization in structural connectomes</b><br><i><u>Sung Soo Moon</u>, E. Marin, T. St&uuml;rner, D. Krzemi&nacute;ski, P. Schlegel, Janelia FlyEM Project Team, G. Jefferis, and S. Ahnert.</i><br>
 10:00am: <b>Power-law tailed weight distributions in connectome graphs</b><br><i> <u>Geza Odor</u>, Istvan Papp, Jeffrey Kelling, Deco Gustavo, and Michael Gastner.</i><br><br> </p>
 
@@ -211,7 +211,7 @@
 <p style="background-color:#DCDCDC">
 12:30pm:  <b>Lunch Break</b> <br>
 </p><br>
-2:30pm:  <b>Invited talk - TBD</b><br><i>Javeria Ali Hashmi</i> <br> </p>
+2:30pm:  <b>System segregation in brain networks underpins the capacity for learning across the human lifespan</b><br><i>Javeria Ali Hashmi</i> <br> </p>
 3:00pm:  <b>Preterm children and rich clubs</b><br><i><u>David Vanier</u>, Hongye Wang, Amanda Ip, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
 3:15pm:  <b>SC-FC in PD</b><br><i><u>Alberto Cacciola</u>, Gianpaolo Basile, Giuseppe Acri, Lilla Bonanno, Augusto Ielo, Silvia Marino, Amelia Brigandì, Chiara Sorbera, Rosa Morabito, Giuseppe Di Lorenzo, Antonio Cerasa, and Angelo Quartarone.</i> <br>
 3:30pm:  <b>Structural and functional analysis of cognitive integration and segregation within aging human connectomes</b><br><i><u> Drew Patton</u> and Joern Davidsen.</i> <br><br>
@@ -231,8 +231,8 @@
 <b>Increasing robustness and reproducibility in network neuroscience through multiverse analysis – The Comet toolbox</b>. <u><i>Micha Burkhardt</u> and Carsten Giessing.</i><br>
 <b>Detection of local connectivity perturbations of networks on a latent hyperbolic space</b>. <i><u>Alice Longhena</u>, Martin Guillemaud, and Mario Chavez.</i><br>
 <b>Emergence of a synergistic scaffold in the brains of human infants</b>. <u><i>Thomas Varley</u>, Olaf Sporns, Nathan Stevenson, Martha Welch, Michael Myers, Vanhatalo Sampsa, and Anton Tokariev.</i><br>
-<b>Memory capacity in reservoir computing</b>.<u> <i>Fatemeh Hadaeghi</u> and Claus Hilgetag.</i><br>
-<b>Timer varying synergy redundancy</b>. <u><i>Maria Pope</u>, Thomas Varley, and Olaf Sporns.</i><br>
+<b>Enhancing Memory Capacity in Reservoir Computing with Brain-Inspired Connectivity Patterns Through Asymmetry</b>.<u> <i>Fatemeh Hadaeghi</u> and Claus Hilgetag.</i><br>
+<b>Time-varying synergy/redundancy dominance in the human cerebral cortex</b>. <u><i>Maria Pope</u>, Thomas Varley, and Olaf Sporns.</i><br>
 <b>Learning in spiking networks</b>. <u><i>Arshia Razavi</u> and Javier G. Orlandi</i>.<br>
 <b>Modelling the Complexity of Treatment Resistant Depression using Markov Random Fields</b>. <u><i>Alice Erchov</u>, Downar Jonathan, Daniel Blumberger, and Fidel Vila-Rodriguez.</i><br>
 <b>Network spreading and local biological vulnerability in amyotrophic lateral sclerosis</b>. <i><u>Asa Farahani</u> and Bratislav Misic.</i><br>
