--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
 11:00am:  <b>Information transmission in mammalian brain networks</b><br><i>Enrico Amico</i><br> 
 11:30am:  <b>Emergence of metastability in frustrated oscillatory networks: the key role of hierarchical modularity</b><br><i><u>Enrico Caprioglio</u> and Luc Berthouze.</i> <br>
 11:45am: <b>Situating edge time series within the generalized linear model framework</b><br><i><u>Haily Merritt</u>, Amanda Mejia, and Richard Betzel.</i></p>
-12:00pm:  <b>Simulated Annealing</b><br><i><u>Filip Milisav</u>, Vincent Bazinet, Richard Betzel, and Bratislav Misic.</i> <br><br>
+12:00pm:  <b>A simulated annealing algorithm for randomizing weighted networks</b><br><i><u>Filip Milisav</u>, Vincent Bazinet, Richard Betzel, and Bratislav Misic.</i> <br><br>
 
 <p style="background-color:#DCDCDC">
 12:30pm:  <b>Lunch Break</b> <br>
 </p><br>
 2:30pm:  <b>System segregation in brain networks underpins the capacity for learning across the human lifespan</b><br><i>Javeria Ali Hashmi</i> <br> </p>
 3:00pm:  <b>Preterm children and rich clubs</b><br><i><u>David Vanier</u>, Hongye Wang, Amanda Ip, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
-3:15pm:  <b>SC-FC in PD</b><br><i><u>Alberto Cacciola</u>, Gianpaolo Basile, Giuseppe Acri, Lilla Bonanno, Augusto Ielo, Silvia Marino, Amelia Brigandì, Chiara Sorbera, Rosa Morabito, Giuseppe Di Lorenzo, Antonio Cerasa, and Angelo Quartarone.</i> <br>
+3:15pm:  <b>Structural and functional connectivity predicts MRgFUS thalamotomy outcome in Parkinson's disease</b><br><i><u>Alberto Cacciola</u>, Gianpaolo Basile, Giuseppe Acri, Lilla Bonanno, Augusto Ielo, Silvia Marino, Amelia Brigandì, Chiara Sorbera, Rosa Morabito, Giuseppe Di Lorenzo, Antonio Cerasa, and Angelo Quartarone.</i> <br>
 3:30pm:  <b>Structural and functional analysis of cognitive integration and segregation within aging human connectomes</b><br><i><u> Drew Patton</u> and Joern Davidsen.</i> <br><br>
 
 <p style="background-color:#DCDCDC">
