--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 12:30pm:  <b>Lunch Break</b> <br>
 </p><br>
 2:30pm:  <b>System segregation in brain networks underpins the capacity for learning across the human lifespan</b><br><i>Javeria Ali Hashmi</i> <br> </p>
-3:00pm:  <b>Preterm children and rich clubs</b><br><i><u>David Vanier</u>, Hongye Wang, Amanda Ip, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
+3:00pm:  <b>Subtle differences in network architecture of very preterm born children</b><br><i><u>David Vanier</u>, Hongye Wang, Amanda Ip, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
 3:15pm:  <b>Structural and functional connectivity predicts MRgFUS thalamotomy outcome in Parkinson's disease</b><br><i><u>Alberto Cacciola</u>, Gianpaolo Basile, Giuseppe Acri, Lilla Bonanno, Augusto Ielo, Silvia Marino, Amelia Brigandì, Chiara Sorbera, Rosa Morabito, Giuseppe Di Lorenzo, Antonio Cerasa, and Angelo Quartarone.</i> <br>
 3:30pm:  <b>Structural and functional analysis of cognitive integration and segregation within aging human connectomes</b><br><i><u> Drew Patton</u> and Joern Davidsen.</i> <br><br>
 
@@ -233,7 +233,7 @@
 <b>Emergence of a synergistic scaffold in the brains of human infants</b>. <u><i>Thomas Varley</u>, Olaf Sporns, Nathan Stevenson, Martha Welch, Michael Myers, Vanhatalo Sampsa, and Anton Tokariev.</i><br>
 <b>Enhancing Memory Capacity in Reservoir Computing with Brain-Inspired Connectivity Patterns Through Asymmetry</b>.<u> <i>Fatemeh Hadaeghi</u> and Claus Hilgetag.</i><br>
 <b>Time-varying synergy/redundancy dominance in the human cerebral cortex</b>. <u><i>Maria Pope</u>, Thomas Varley, and Olaf Sporns.</i><br>
-<b>Learning in spiking networks</b>. <u><i>Arshia Razavi</u> and Javier G. Orlandi</i>.<br>
+<b>Learning and stabilizing memories in noisy recurrent spiking neural networks</b>. <u><i>Arshia Razavi</u> and Javier G. Orlandi</i>.<br>
 <b>Modelling the Complexity of Treatment Resistant Depression using Markov Random Fields</b>. <u><i>Alice Erchov</u>, Downar Jonathan, Daniel Blumberger, and Fidel Vila-Rodriguez.</i><br>
 <b>Network spreading and local biological vulnerability in amyotrophic lateral sclerosis</b>. <i><u>Asa Farahani</u> and Bratislav Misic.</i><br>
 <b>Functional brain network interaction changes across the ovarian cycle</b>. <i><u>Xining Chen</u>, Joespeh Andreano, Abigail Giancola, Sophia Tchir, and Emma K. Towlson.</i><br>
