--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 </p><br>
 4:30pm:  <b>Neuroblox Circuits: Leveraging Biomimetic Computational Primitives to Elicit Emergent Corticostriatal Learning</b><br><i>Lilianne R. Mujica-Parodi</i> <br>
 5:00pm:  <b>Higher-order connectomics of human brain function reveals local topological signatures of task decoding, individual identification, and behavior</b><br><i><u>Andrea Santoro</u>, Federico Battiston, Maxime Lucas, Giovanni Petri, and Enrico Amico.</i> <br>
-5:15pm:  <b>Brain network controllability during development</b><br><i><u>Hongye Wang</u>, Shefali Rai, Kate Godfrey, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
+5:15pm:  <b>Brain network controllability during development</b><br><i><u>Hongye Wang</u>, David Vanier, Shefali Rai, Kate Godfrey, Shelly Yin, Kirk Graff, Ryann Tansey, Xining Chen, Signe Bray, and Emma K. Towlson.</i> <br>
 5:30pm: Closing remarks <br><br>
 
 <p style="background-color:#DCDCDC">
