--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               </div>
 
 
-        <!-- Submissions are now closed, but last minute submissions may be accepted on a rolling basis as a POSTER ONLY. Submissions received after July 8th will not be considered.--> 
+        <!-- Submissions are now open, but last minute submissions may be accepted on a rolling basis as a POSTER ONLY. Submissions received after July 8th will not be considered.--> 
       </p>
     </div>
 
