--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </ul>
       <p>&nbsp;</p>
       <p>
-        Submissions are now closed for oral contributions, but we are accepting poster presentations on a rolling basis. <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> in the format of a one-page pdf with one figure. Posters may be presented at both the satellite and at the main conference.</p>
+        Submissions are now open for oral contributions, but we are accepting poster presentations on a rolling basis. <a href="https://netneurosci2024.sciencesconf.org/">Submit your abstract</a> in the format of a one-page pdf with one figure. Posters may be presented at both the satellite and at the main conference.</p>
       <p>&nbsp;</p>
       <p>Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is April 8th. <br>
         <br>
