--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Network Neuroscience 2024</title>
+  <title>Network Neuroscience 2025</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,7 +41,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">Network Neuroscience 2024</a></h1>
+        <h1><a href="index.html">Network Neuroscience 2025</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -66,7 +66,7 @@
               </li> -->
               <li><a href="index.html#organizers">Organizers</a></li>
             <li><a href="index.html#contact">Contact</a></li>
-            <li><a href="https://netsci2024.com/">NetSci 2024</a></li>
+            <li><a href="https://netsci2025.github.io/">NetSci 2025</a></li>
             <li><a href="https://direct.mit.edu/netn">Journal</a></li>
             <!--<li><a href="https://netneurosci.github.io/networks2022satellite/posterwall/#zoom=1&x=0.5&y=0.18460358469239463">Poster Session</a></li>-->
             <li><a href="history.html">History</a></li>
@@ -98,7 +98,7 @@
           <p>
             <br>
             <br>
-            Our Network Neuroscience satellite is now entering its 10th year, and has consistently proven to be one of the most well attended NetSci satellites. The first Brain Networks satellite was held at NetSci 2015 in Zaragoza, Spain. After two successful years, the satellite was expanded and rebranded in 2017 in Indiana, USA, to fully encompass the broader field of Network Neuroscience. An estimated 120 participants consistently attended (and about 150 unique registrants joined over the course of the whole day). As the satellite has grown, additional activities have helped to increase its presence at the conference. At NetSci 2018 in Paris, France and NetSci 2019 in Vermont, USA, we held a hackathon, Brainhack Networks, for students from a variety of disciplines. There have also been dedicated lectures for Network Neuroscience in the International School.
+            Our Network Neuroscience satellite is now entering its 11th year, and has consistently proven to be one of the most well attended NetSci satellites. The first Brain Networks satellite was held at NetSci 2015 in Zaragoza, Spain. After two successful years, the satellite was expanded and rebranded in 2017 in Indiana, USA, to fully encompass the broader field of Network Neuroscience. An estimated 120 participants consistently attended (and about 150 unique registrants joined over the course of the whole day). As the satellite has grown, additional activities have helped to increase its presence at the conference. At NetSci 2018 in Paris, France and NetSci 2019 in Vermont, USA, we held a hackathon, Brainhack Networks, for students from a variety of disciplines. There have also been dedicated lectures for Network Neuroscience in the International School.
 
             <br>
             <br>
@@ -112,6 +112,7 @@
             Legacy material that is still live:
             <br>
             <br>
+            <b><a href="http://networkneuroscience.github.io/index_2024.html">Network Neuroscience 2024</a></b><br>
             <b><a href="http://networkneuroscience.github.io/index_2023.html">Network Neuroscience 2023</a></b><br>
 	     <b><a href="http://networkneuroscience.github.io/index_2022.html">Network Neuroscience 2022</a></b> <br>
             <b><a href="https://netneurosci.github.io/networks2021satellite/">Network Neuroscience 2021</a></b> <br>
