--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
   <div class="container text-center text-md-left" data-aos="fade-up">
     <h1>Welcome to <span>Network Neuroscience 2025</span></h1>
-    <h2>NetSci 2025 affiliated satellite - Maastricht, June 2025</h2>
+    <h2>NetSci 2025 affiliated satellite - Maastricht, June 2nd 2025</h2>
     <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> --> 
   </div>
 </section>
@@ -137,9 +137,9 @@
       </ul>
       <p>&nbsp;</p>
       <p>
-        <!--Submissions are now closed for oral contributions, but we are accepting poster presentations on a rolling basis. <a href="https://netneurosci2024.sciencesconf.org/">--> Submit your abstract <!--</a>--> by February 10th in the format of a one-page pdf with one figure. Posters may be presented at both the satellite and at the main conference.</p>
+        <!--Submissions are now closed for oral contributions, but we are accepting poster presentations on a rolling basis.--> <a href="https://easychair.org/conferences?conf=netneuro25"> Submit your abstract </a> by February 17th in the format of a one-page pdf with one figure. Posters may be presented at both the satellite and at the main conference.</p>
       <p>&nbsp;</p>
-      <p>Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is February 24th. <br>
+      <p>Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is March 6th. <br>
         <br>
         <br>
 <!--
@@ -188,7 +188,7 @@
   <div class="container">
     <div class="section-title">
       <h2>Schedule: Coming soon</h2>
-      <p> Network Neuroscience 2025 will be held <!--on Tuesday 18th June--> in Maastricht as a satellite of the <a href="https://netsci2025.github.io/">International School and Conference on Network Science</a> (NetSci 2025). <!--Find us in Room 206B.--></p> <br>
+      <p> Network Neuroscience 2025 will be held on Monday 2nd June in Maastricht as a satellite of the <a href="https://netsci2025.github.io/">International School and Conference on Network Science</a> (NetSci 2025). <!--Find us in Room 206B.--></p> <br>
 
 <!--
 <p style="background-color:#DCDCDC">
@@ -255,7 +255,7 @@
   <div class="container">
     <div class="section-title">
       <h2>Registration</h2>
-      <p>Network Neuroscience is a satellite of the NetSci conference. You can register for Network Neuroscience through the NetSci website - select "Satellite events only" if you only wish to attend Network Neuroscience and other satellites. Please note that the early registration deadline is 24th February 2025. <br>
+      <p>Network Neuroscience is a satellite of the NetSci conference. You can register for Network Neuroscience through the NetSci website - select "Satellite events only" if you only wish to attend Network Neuroscience and other satellites. Please note that the early registration deadline is 6th March 2025. <br>
         <br>
         <a href="https://netsci2025.github.io/registration/">Register here</a> </p>
     </div>
@@ -364,9 +364,8 @@ State University of New York at Stony Brook
             <div class="member">
               <img src="assets/img/enrico.jpeg" alt="">
               <h4>Enrico Amico</h4>
-              <span>Institute of Health and Neurodevelopment</span>
+              <span>University of Birmingham</span>
               <p>
-College of Health and Life Sciences, Aston University
               </p>
               <div class="social">
                 <a href="https://amicolab.org/"><i class="bx bx-link"></i></a>
@@ -410,7 +409,7 @@ College of Health and Life Sciences, Aston University
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/joaquin.jpeg" alt="">
+              <img src="assets/img/jgonicor_2019.jpg" alt="">
               <h4>Joaquín Goñi</h4>
               <span>Purdue University</span>
               <p>
