--- a/index.html
+++ b/index.html
@@ -267,23 +267,23 @@
 <section id="speakers" class="team">
   <div class="container">
     <div class="section-title">
-      <h2>Speakers: Coming soon</h2>
+      <h2>Speakers</h2>
       <p></p>
     </div>
 
 
-<!--
+
               <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/enrico.jpeg" alt="">
-              <h4>Enrico Amico</h4>
-              <span>Institute of Health and Neurodevelopment</span>
+              <img src="assets/img/alard.jpg" alt="">
+              <h4>Alard Roebroeck</h4>
+              <span>Department of Cognitive Neuroscience</span>
               <p>
-College of Health and Life Sciences, Aston University
+Maastricht Brain Imaging Centre (MBIC), Faculty of Psychology & Neuroscience, Maastricht University
               </p>
               <div class="social">
-                <a href="https://amicolab.org/"><i class="bx bx-link"></i></a>
+                <a href="https://cbclab.org"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -291,14 +291,14 @@ College of Health and Life Sciences, Aston University
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/javeria.jpeg" alt="">
-              <h4>Javeria Ali Hashmi</h4>
-              <span>Canada Research Chair, Associate Professor</span>
+              <img src="assets/img/sonja.jpeg" alt="">
+              <h4>Sonja Kotz</h4>
+              <span>Department of Neuropsychology and Psychopharmacology (NPPP)</span>
               <p>
-Department of Anesthesia, Pain management and Perioperative Medicine, Dalhousie University
+Faculty of Psychology and Neuroscience (FPN), Maastricht University
               </p>
               <div class="social">
-                <a href="http://Netphyslab.com/"><i class="bx bx-link"></i></a>
+                <a href="https://band-lab.com/"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -306,17 +306,14 @@ Department of Anesthesia, Pain management and Perioperative Medicine, Dalhousie 
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/lm-parodi.jpeg" alt="">
-              <h4>Lilianne R. Mujica-Parodi</h4>
-              <span>Baszucki Endowed Chair of Metabolic Neuroscience, Professor, Director - Laboratory for Computational Neurodiagnostics (LCNeuro)</span>
+              <img src="assets/img/mvdh.png" alt="">
+              <h4>Martijn van den Heuvel</h4>
+              <span>CNCR</span>
               <p>
-Department of Biomedical Engineering,
-Laufer Center for Physical and Quantitative Biology,
-State University of New York at Stony Brook
+VU Amsterdam
               </p>
               <div class="social">
-                <a href="http://lcneuro.org"><i class="bx bx-link"></i></a>
-                <a href="https://neuroblox.org"><i class="bx bx-link"></i></a>
+                <a href="https://www.dutchconnectomelab.nl/"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -327,19 +324,20 @@ State University of New York at Stony Brook
 
                         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/nils-forkert.jpeg" alt="">
-              <h4>Nils D. Forkert</h4>
-              <span>Canada Research Chair, Professor</span>
+              <img src="assets/img/athena.jpg" alt="">
+              <h4>Athena Demertzi</h4>
+              <span>
+GIGA Neurosciences - Physiology of Cognition</span>
               <p>
-          Department of Radiology, University of Calgary
+          Département des sciences cliniques, Faculté de Médecine, Université de Liège
               </p>
               <div class="social">
-                <a href="https://ucalgary.ca/miplab"><i class="bx bx-link"></i></a>
+                <a href="https://www.gigaphysiologycognition.uliege.be/cms/c_5288768/en/gigaphysiologycognition?id=c_5288768"><i class="bx bx-link"></i></a>
               </div>
             </div>
             </div>
 
-    -->
+    
 
       
   </div>
