--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </ul>
       <p>&nbsp;</p>
       <p>
-        <!--Submissions are now closed for oral contributions, but we are accepting poster presentations on a rolling basis.--> <a href="https://easychair.org/conferences?conf=netneuro25"> Submit your abstract </a> by February 17th in the format of a one-page pdf with one figure. Posters may be presented at both the satellite and at the main conference.</p>
+        <!--Submissions are now closed for oral contributions, but we are accepting poster presentations on a rolling basis.--> <a href="https://easychair.org/cfp/NetNeuro25" > Submit your abstract </a> by February 17th in the format of a one-page pdf with one figure. Posters may be presented at both the satellite and at the main conference.</p>
       <p>&nbsp;</p>
       <p>Note that you must register for NetSci to attend (there is an option to select only the satellite sessions and school) and the early bird registration deadline is March 6th. <br>
         <br>
@@ -306,7 +306,7 @@ Faculty of Psychology and Neuroscience (FPN), Maastricht University
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/mvdh.png" alt="">
+              <img src="assets/img/mvdh.jpeg" alt="">
               <h4>Martijn van den Heuvel</h4>
               <span>CNCR</span>
               <p>
